[package]
name = "parser"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thiserror = "1.0.48"
anyhow = "1.0.75"
strum_macros = "0.25.2"
log = "0.4.20"
env_logger = "0.10.0"
bitflags = "2.4.0"
itertools = "0.11.0"
cesu8 = "1.1.0"
result = "1.0.0"